Fix overflow layout & Search bar issues

--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 	--bg: #2e3440; /* Background color */
 	--sbg: #3b4252; /* Cards color */
 	--imgcol: linear-gradient(
-			rgba(46, 52, 64, 0.7),
-			rgba(46, 52, 64, 0.7));
+			rgba(46, 52, 64, 0.8),
+			rgba(46, 52, 64, 0.8));
 	--hbg: rgba(76, 86, 106, 0.8);
 	--fg: #d8dee9; /* Secondary foreground */
 	--sfg: #2e3440;
@@ -23,8 +23,8 @@
 	--bg: #d8dee9;
 	--sbg: #e5e9f0;
 	--imgcol: linear-gradient(
-		rgba(216, 222, 233, 0.7),
-		rgba(216, 222, 233, 0.7)
+		rgba(216, 222, 233, 0.8),
+		rgba(216, 222, 233, 0.8)
 	);
 	--hbg: rgba(216, 222, 233, 1);
 	--fg: #434c5e;
@@ -35,14 +35,11 @@
 * {
  box-sizing: border-box;
  font-family: 'Montserrat', sans-serif;
- /* transition: 0.3s ease-in-out; */
 }
 
 body {
-	overflow: hidden;
-
-	width: 100vw;
-	height: 100vh;
+	/* width: 100vw; */
+	min-height: 100vh;
 
 	margin: 0;
 	padding: 1px;
@@ -168,8 +165,8 @@ body {
 		font-size: 1.2rem;
 	}
 	.weather__icon {
-		width: 24px;
-		height: 24px;
+		width: 30px;
+		height: 30px;
 	}
 
 	.time {
@@ -198,17 +195,13 @@ body {
 	box-shadow: var(--shadow);
 
 	display: flex;
-	/* flex-wrap: wrap; */
 	justify-content: end;
 	align-items: center;
 }
 
-.search__container {
-	display: inline;
-}
-
 .search__input {
 	padding: 0 1rem;
+	width: 100%;
 	height: 100%;
 
 	color: var(--fg);
@@ -217,7 +210,7 @@ body {
 	border-radius: 8px;
 	outline: none;
 
-	flex: 0 0 88%;
+	/* flex: 0 0 88%; */
 }
 *::placeholder {
 	color: var(--fg);
@@ -237,8 +230,6 @@ body {
 	border: none;
 	border-radius: 0 8px 8px 0;
 	outline: none;
-
-	flex: 0 0 12%;
 }
 .search__button:hover {
 	cursor: pointer;
@@ -256,7 +247,7 @@ body {
 
 	background-color: var(--sbg);
 	border-radius: 8px;
-	box-shadow: 0px 8px 40px #13161c;
+	box-shadow: 0 8px 40px #13161c;
 }
 
 .search__suggestion-list {
@@ -331,20 +322,20 @@ body {
 	max-width: 90%;
 	margin: 3rem auto;
 
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
+	display: grid;
+	grid-template-columns: repeat(4, 1fr);
+	/* grid-template-rows: 3.5rem; */
+	/* grid-auto-rows: 3.5rem; */
+	gap: 1rem;
+}
+@media (max-width: 768px) {
+	.card__container {
+		place-items: center;
+	}
 }
 
 .card {
-	min-height: 3.5rem;
-	min-width: 3.5rem;
-	max-height: 3.5rem;
-	max-width: 3.5rem;
-
-	padding: 0.5rem;
-	margin-bottom: 2rem;
-	margin-right: 2rem;
+	padding: 1rem;
 
 	color: var(--fg);
 	background-color: var(--sbg);
@@ -352,21 +343,20 @@ body {
 	border-radius: 8px;
 
 	text-align: center;
-	flex: 0 0 calc(25% - 2rem);
 }
-.card:nth-child(4),
-.card:last-child {
-	margin-right: 0;
-}
-@media (min-width: 600px) {
+@media (min-width: 450px) {
 	.card {
-		min-height: 5rem;
-		min-width: 5rem;
-		max-width: 5rem;
-		max-height: 5rem;
-
-		margin-right: 6rem;
-		margin-bottom: 4rem;
+		padding: 1.5rem;
+	}
+}
+@media (min-width: 550px) {
+	/* .card__container{ */
+	/* 	padding: 2.5rem; */
+	/* 	grid-template-rows: 5rem; */
+	/* 	grid-auto-rows: 5rem; */
+	/* } */
+	.card {
+		padding: 2.5rem;
 	}
 }
 
@@ -378,7 +368,6 @@ body {
 	font-weight: 500;
 
 	color: var(--bg);
-	/* background-color: var(--frost-green); */
 	border-radius: 8px;
 }
 
@@ -418,14 +407,6 @@ body {
 	.card__container--listview {
 		display: grid;
 	}
-	.card__container {
-		max-width: 70%;
-		margin: 2rem auto;
-
-		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-		grid-gap: 1rem;
-	}
 
 	.card__container--iconview {
 		display: none;
@@ -434,8 +415,6 @@ body {
 	.card {
 		width: auto;
 		height: 18rem;
-		max-height: 18rem;
-		max-width: 100rem;
 
 		margin: 0;
 		padding: 1rem;
@@ -443,6 +422,11 @@ body {
 
 	.card__link {
 		display: block;
-		height: auto;
+	}
+}
+
+@media (min-width: 1000px) {
+	.card__container {
+		max-width: 70%;
 	}
 }
